<!--
  ~  Copyright Pegasis 2018
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  -->

<resources>
    <string name="app_name">YRDSB Student Tool</string>
    <string name="ok">OK</string>
    <string name="student_number">Student Number</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="student_number_is_empty">Student number is empty</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="student_number_or_password_incorrect">Student number or password incorrect</string>
    <string name="no_network">No network</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="marks">Marks</string>
    <string name="trends">Trends</string>
    <string name="about">About</string>
    <string name="ku">K/U</string>
    <string name="t">T</string>
    <string name="c">C</string>
    <string name="a">A</string>
    <string name="knowledge_understanding">Knowledge / Understanding</string>
    <string name="thinking">Thinking</string>
    <string name="communication">Communication</string>
    <string name="application">Application</string>
    <string name="class_code">"Class Code: "</string>
    <string name="period">"Period: "</string>
    <string name="room">"Room: "</string>
    <string name="duration">"Duration: "</string>
    <string name="unknown_class_name">Unknown Class Name</string>
    <string name="no_data_available">No Data Available</string>
    <string name="unknown">Unknown</string>
    <string name="level_1" translatable="false">Level 1</string>
    <string name="level_2" translatable="false">Level 2</string>
    <string name="level_3" translatable="false">Level 3</string>
    <string name="level_4" translatable="false">Level 4</string>
    <string name="copy">Copy</string>
    <string name="current_mark">Current mark:</string>
    <string name="copied">Copied</string>
</resources>
