<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright Pegasis 2018
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  -->


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content" android:paddingLeft="8dp"
                                             android:paddingRight="8dp">


    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/name_tv" android:layout_weight="1"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:textColor="@android:color/black" android:textSize="20sp"
            tools:text="Graph of linear equation"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/mark_tv" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/mark_tv" tools:text="95%"
            android:textColor="@android:color/black" android:textSize="24sp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
    <com.zhy.android.percent.support.PercentLinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linearLayout"
            android:layout_margin="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/name_tv" android:paddingTop="8dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_widthPercent="25%w"
                android:gravity="center_horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:text="@string/ku"
                    android:gravity="center"/>
            <TextView
                    android:layout_height="match_parent" android:id="@+id/ku_tv"
                    android:gravity="center" android:layout_width="wrap_content"
                    tools:text="9.5 / 11\n86% " android:textColor="@android:color/black"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_widthPercent="25%w"
                android:gravity="center_horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:text="@string/t" android:gravity="center"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/t_tv"
                    android:gravity="center" tools:text="10 / 10\n100%"
                    android:textColor="@android:color/black"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_widthPercent="25%w"
                android:gravity="center_horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black" android:text="@string/c"
                    android:layout_height="wrap_content" android:gravity="center"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/c_tv"
                    android:gravity="center" tools:text="N/A" android:textColor="@android:color/black"
                    tools:textColor="@color/grey"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_widthPercent="25%w"
                android:gravity="center_horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:text="@string/a" android:gravity="center"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/a_tv"
                    android:gravity="center" tools:text="11.5 / 13\n88%"
                    android:textColor="@android:color/black"/>
        </LinearLayout>
    </com.zhy.android.percent.support.PercentLinearLayout>
</android.support.constraint.ConstraintLayout>
